2004-09-20  Christopher Faylor  <cgf@timesys.com>

	* exceptions.cc (sig_handle_tty_stop): Set flag earlier.

2004-09-20  Christopher Faylor  <cgf@timesys.com>

	* exceptions.cc (sig_handle_tty_stop): Set flag that we are in a cygwin
	function to avoid a probably erroneous stack walk.

2004-09-17  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (unlink): Don't use "delete on close" on remote shares.

2004-09-17  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din (_impure_ptr): Add export again. There are libs out there.

2004-09-16  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din (_impure_ptr): Don't export.
	(reent_data): Export.
	* lib/_cygwin_crt0_common.cc (_impure_ptr): Drop entirely.  Don't
	initialize _impure_ptr or u->impure_ptr_ptr.

2004-09-15  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din (_impure_ptr): Export.
	(reent_data): Don't export.
	* dcrt0.cc (reent_data): Drop.
	(__cygwin_user_data): Initialize impure_ptr as GLOBAL_REENT.
	(_dll_crt0): Initialize _impure_ptr as GLOBAL_REENT.
	* lib/_cygwin_crt0_common.cc (_impure_ptr): Drop.  Declare extern as
	dllimport instead.

2004-09-14  Christopher Faylor  <cgf@timesys.com>

	* cygtls.h: Add alignment kludge to fix disparity between compilers.
	* tlsoffsets.h: Regenerate.

	* fork.cc (slow_pid_reuse): Use define to control number of pids held
	to prevent pid reuse.

2004-09-14  Sam Steingold  <sds@gnu.org>

	* autoload.cc (EnumProcessModules): Add.
	* dlfcn.cc (dlsym): Handle RTLD_DEFAULT using EnumProcessModules().
	* include/dlfcn.h (RTLD_DEFAULT): Define to NULL.

2004-09-13  Christopher Faylor  <cgf@timesys.com>

	* fork.cc (slow_pid_reuse): Temporarily double the number of pids held
	to prevent pid reuse.

2004-09-12  Christopher Faylor  <cgf@timesys.com>

	* sigproc.cc (wait_sig): Ensure that waiting threads are awoken after
	returning from a hold condition.

2004-09-12  Christopher Faylor  <cgf@timesys.com>

	* child_info.h (CURR_CHILD_INFO_MAGIC): Update.
