@@ -1,3 +1,10 @@
+2004-09-22  Pierre Humblet <pierre.humblet@ieee.org>
+
+	* path.cc (normalize_win32_path): Only look for : in second position.
+	Avoid infinite loop with names starting in double dots.
+	(mount_info::conv_to_win32_path): Do not worry about a trailing dot. 
+	(hash_path_name): Ditto.
+
 2004-09-20  Christopher Faylor  <cgf@timesys.com>
 
 	* exceptions.cc (sig_handle_tty_stop): Set flag earlier.
